2004-01-11 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20040111

2004-01-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* docs/Makefile.am: Changed doc install directory readme to readmes

2004-01-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gsch2pcb.c, examples/gsch2pcb/project.sample: Upgraded to 
	Bill Wilson's latest version (1.2)

	* scripts/gsymupdate: Found a last minute critical bug which
	caused gschem/gschlas to assert because a text field (the number
	of lines) wasn't being set on split text lines.  gsymupdate does
	not really handle multi line text items.  A bug needs to be
	filed for this so it is not forgotten about.

2004-01-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Added --with-docdir command line flag as well all
        the code to support installing documentation.  Also added a prog
        check for groff.

	* docs/README.*: Moved all the readmes into the docs subdirectory.

	* docs/Makefile.am: Added code to install all the readme files
        into the documentation directory.  

2003-12-31 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Bumped version to 20031231

2003-12-30 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/garchive.py, Makefile.am: Included Stuart's garchive
	script.

	* ChangeLog.gsch2pcb, src/glib12-compat.c, src/gsch2pcb.c:
	Included Bill Wilson's latest gsch2pcb (version 1.1)
	
2003-12-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Added checks for gtk+ 2.2.x and 1.2.x.  This was
	needed since the HAS_GTK22 will start to be used in libgeda includes.

2003-11-09 Ales Hvezda   <ahvezda@geda.seul.org>

        * autogen.sh: Added script to generate all the auto* generated files.

        * config.guess config.sub depcomp install-sh mkinstalldirs missing
	compile: Removed machine generated files from CVS.

        * Makefile.am: Added the above files to be cleaned during
        maintainer-clean

2003-10-19 Ales Hvezda   <ahvezda@geda.seul.org>
