@@ -1,6 +1,16 @@
 
 gsch2pcb Changelog
 ------------------
+1.4
+---------
+	* Handle the hi_res PCB Element[] format which is new in PCB CVS (as
+	  of 1/9/2004).
+
+1.3
+---------
+	* Add empty-footprint option and give special treatment to "none"
+	  footprint attributes.  See discussion in the project.sample file.
+
 1.2
 ---------
 	* Dan McMahill updated the gnet-gsch2pcb.scm file to quote the m4
